--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "semantic": "0.0.1",
     "semantic-ui-css": "^2.3.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^1.3.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
