Show transactions in a table

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "semantic": "0.0.1",
     "semantic-ui-css": "^2.3.0",
     "vue": "^2.5.2",
