--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "semantic": "0.0.1",
     "semantic-ui-css": "^2.3.0",
